# brain2text-ssl-nhp

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/ablations/: ablation_4ab2_bidir_dual_all_nhp.yaml  ablation_4ab2_bidir_dual_fine_motor.yaml  ablation_4ab2_bidir_dual_reaching.yaml  ablation_4ab2_bidir_dual_soma.yaml  ablation_4ab2_bidir_dual_soma_extended.yaml  ablation_4ab_bidir_hidden_only_soma.yaml
configs/archive/05_ssl_pretraining_v2/: ssl_all_nhp_log.yaml  ssl_causal_all_nhp.yaml  ssl_causal_somatosensory.yaml  ssl_fine_motor_log.yaml  ssl_reaching_log.yaml  ssl_reaching_log_extended.yaml  ssl_soma_reaching_log.yaml  ssl_somatosensory_aug_aligned.yaml  ssl_somatosensory_log.yaml
configs/baselines/: gru_baseline.yaml  gru_defaults.yaml  transformer_from_scratch.yaml
configs/grid/: ar_binary_causal_all_nhp.yaml  ar_binary_causal_fine_motor.yaml  ar_binary_causal_reaching.yaml  ar_binary_causal_reaching_extended.yaml  ar_binary_causal_somatosensory.yaml  masked_recon_all_nhp.yaml  masked_recon_fine_motor.yaml  masked_recon_reaching.yaml  masked_recon_somatosensory.yaml
configs/ssl_study/: ar_binary_causal_soma_800ep.yaml  ar_binary_causal_soma_extended.yaml  channel_mask_mse_soma.yaml  contrastive_temporal_soma.yaml  denoising_soma.yaml  masked_recon_015_soma.yaml  masked_recon_075_soma.yaml
docs/: architecture.md  results.md
examples/: reproduce_headline.md
scripts/: evaluate_cca.py  evaluate_cca_cross_participant.py  finetune.py  preprocess_nhp.py  preprocess_t12.py  pretrain.py  train.py
src/brain2text/: __init__.py
(+353 files in other folders)
